--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "private": true,
+  "engineStrict": true,
   "engines": {
-    "node": ">=16.14.0"
+    "node": "=18.12.0"
   },
   "scripts": {
     "dev": "shopify hydrogen dev",
