--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@shopify/hydrogen": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "sass": "^1.55.0"
   },
   "author": "gazzamacd42"
